--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-scripts",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "description": "Configuration and scripts for Create React Redux App.",
   "repository": "hqro/redux-scripts",
   "license": "MIT",
@@ -28,7 +28,7 @@
     "babel-eslint": "8.2.3",
     "babel-jest": "22.4.3",
     "babel-loader": "8.0.0-beta.0",
-    "babel-plugin-named-asset-import": "^0.1.0",
+    "babel-plugin-named-asset-import": "next",
     "babel-preset-react-app": "^3.1.1",
     "bfj": "5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
@@ -49,16 +49,16 @@
     "graphql-tag": "2.9.2",
     "html-webpack-plugin": "3.2.0",
     "identity-obj-proxy": "3.0.0",
-    "loader-utils": "^1.1.0",
     "jest": "22.4.3",
+    "loader-utils": "^1.1.0",
     "mini-css-extract-plugin": "^0.4.0",
     "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.3.1",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "postcss-flexbugs-fixes": "3.3.1",
     "postcss-loader": "2.1.5",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react-dev-utils": "^5.0.0",
+    "react-dev-utils": "latest",
     "resolve": "1.6.0",
     "sass-loader": "7.0.1",
     "style-loader": "0.21.0",
