--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-scripts",
-  "version": "3.1.2",
+  "version": "3.1.3",
   "description": "Configuration and scripts for Create React Redux App.",
   "repository": "hqro/redux-scripts",
   "license": "MIT",
@@ -58,7 +58,7 @@
     "postcss-loader": "2.1.5",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react-dev-utils": "latest",
+    "react-dev-utils": "next",
     "resolve": "1.6.0",
     "sass-loader": "7.0.1",
     "style-loader": "0.21.0",
