--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-scripts",
-  "version": "3.1.3",
+  "version": "3.1.4",
   "description": "Configuration and scripts for Create React Redux App.",
   "repository": "hqro/redux-scripts",
   "license": "MIT",
@@ -21,15 +21,15 @@
     "redux-scripts": "./bin/redux-scripts.js"
   },
   "dependencies": {
-    "@babel/core": "7.0.0-beta.46",
-    "@babel/runtime": "7.0.0-beta.46",
-    "autoprefixer": "8.5.0",
+    "@babel/core": "7.0.0-beta.51",
+    "@babel/runtime": "7.0.0-beta.51",
+    "autoprefixer": "8.6.4",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "8.2.3",
+    "babel-eslint": "8.2.5",
     "babel-jest": "22.4.3",
     "babel-loader": "8.0.0-beta.0",
     "babel-plugin-named-asset-import": "next",
-    "babel-preset-react-app": "^3.1.1",
+    "babel-preset-react-app": "3.1.1",
     "bfj": "5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
@@ -39,10 +39,10 @@
     "eslint": "4.19.1",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "2.0.0",
-    "eslint-plugin-flowtype": "2.46.3",
-    "eslint-plugin-import": "2.11.0",
+    "eslint-plugin-flowtype": "2.49.3",
+    "eslint-plugin-import": "2.13.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.8.2",
+    "eslint-plugin-react": "7.10.0",
     "file-loader": "1.1.11",
     "fs-extra": "5.0.0",
     "graphql": "0.13.2",
@@ -59,15 +59,15 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react-dev-utils": "next",
-    "resolve": "1.6.0",
-    "sass-loader": "7.0.1",
+    "resolve": "1.8.1",
+    "sass-loader": "7.0.3",
     "style-loader": "0.21.0",
     "svgr": "1.9.2",
     "sw-precache-webpack-plugin": "0.11.5",
     "thread-loader": "1.1.5",
-    "uglifyjs-webpack-plugin": "1.2.5",
+    "uglifyjs-webpack-plugin": "1.2.7",
     "url-loader": "1.0.1",
-    "webpack": "4.8.3",
+    "webpack": "4.14.0",
     "webpack-dev-server": "3.1.4",
     "webpack-manifest-plugin": "2.0.3",
     "whatwg-fetch": "2.0.4"
@@ -77,7 +77,7 @@
     "react-dom": "^16.4.1"
   },
   "optionalDependencies": {
-    "fsevents": "1.2.0"
+    "fsevents": "1.2.4"
   },
   "browserslist": {
     "development": [
