--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-scripts",
-  "version": "3.1.5",
+  "version": "3.1.6",
   "description": "Configuration and scripts for Create React Redux App.",
   "repository": "hqro/redux-scripts",
   "license": "MIT",
@@ -52,6 +52,7 @@
     "jest": "22.4.3",
     "loader-utils": "^1.1.0",
     "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.9.0",
     "object-assign": "4.1.1",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
     "postcss-flexbugs-fixes": "3.3.1",
